@@ -36,13 +36,13 @@ import prerna.util.Utility;
 public class CreateVectorDatabaseEngineReactor extends AbstractReactor {
 
 	private static final Logger classLogger = LogManager.getLogger(CreateVectorDatabaseEngineReactor.class);
-	
+
 	public CreateVectorDatabaseEngineReactor() {
-		this.keysToGet = new String[] {ReactorKeysEnum.DATABASE.getKey(), ReactorKeysEnum.CONNECTION_DETAILS.getKey(), 
-				ReactorKeysEnum.GLOBAL.getKey()};
-		this.keyRequired = new int[] {1, 1, 0};
+		this.keysToGet = new String[] { ReactorKeysEnum.DATABASE.getKey(), ReactorKeysEnum.CONNECTION_DETAILS.getKey(),
+				ReactorKeysEnum.GLOBAL.getKey() };
+		this.keyRequired = new int[] { 1, 1, 0 };
 	}
-	
+
 	@Override
 	public NounMetadata execute() {
 		User user = this.insight.getUser();
@@ -62,8 +62,7 @@ public class CreateVectorDatabaseEngineReactor extends AbstractReactor {
 		}
 
 		// throw error is user doesn't have rights to publish new databases
-		if (AbstractSecurityUtils.adminSetPublisher()
-				&& !SecurityQueryUtils.userIsPublisher(this.insight.getUser())) {
+		if (AbstractSecurityUtils.adminSetPublisher() && !SecurityQueryUtils.userIsPublisher(this.insight.getUser())) {
 			throwUserNotPublisherError();
 		}
 
@@ -72,39 +71,41 @@ public class CreateVectorDatabaseEngineReactor extends AbstractReactor {
 		}
 
 		organizeKeys();
-		
+
 		String vectorDbName = getVectorDatabaseName();
-		//if vector db name is not valid throw error
+		// if vector db name is not valid throw error
 		if (!Utility.validateName(vectorDbName)) {
-			//error and redirect to try again
-			throw new IllegalArgumentException("Invalid Name: It must start with a letter and can only contain letters, numbers, and spaces.");
+			// error and redirect to try again
+			throw new IllegalArgumentException(
+					"Invalid Name: It must start with a letter and can only contain letters, numbers, and spaces.");
 		}
-		
-		//String vectorDbName = getVectorDatabaseName();
+
+		// String vectorDbName = getVectorDatabaseName();
 		Map<String, Object> vectorDbDetails = getVectorDatabaseDetails();
-		boolean global = Boolean.parseBoolean(this.keyValue.get(ReactorKeysEnum.GLOBAL.getKey())+"");
+		boolean global = Boolean.parseBoolean(this.keyValue.get(ReactorKeysEnum.GLOBAL.getKey()) + "");
 
 		String vectorDbTypeStr = (String) vectorDbDetails.get(IVectorDatabaseEngine.VECTOR_TYPE);
-		if(vectorDbTypeStr == null || (vectorDbTypeStr=vectorDbTypeStr.trim()).isEmpty()) {
+		if (vectorDbTypeStr == null || (vectorDbTypeStr = vectorDbTypeStr.trim()).isEmpty()) {
 			throw new IllegalArgumentException("Must define the model type");
 		}
-		
+
 		VectorDatabaseTypeEnum vectorDbType = null;
 		try {
 			vectorDbType = VectorDatabaseTypeEnum.getEnumFromName(vectorDbTypeStr);
-		} catch(Exception e) {
+		} catch (Exception e) {
 			throw new IllegalArgumentException("Invalid model type " + vectorDbTypeStr);
 		}
-
-		
-		if (!vectorDbDetails.containsKey(Constants.EMBEDDER_ENGINE_NAME)) {
-			String embedderEngineId = (String)vectorDbDetails.getOrDefault(Constants.EMBEDDER_ENGINE_ID, null);
+		// TODO
+		// IF IT IS TYPE PROXY THEN I DONT NEED THE EMBEDDER ENGINE NAME
+		if (vectorDbType != VectorDatabaseTypeEnum.PROXY
+				&& !vectorDbDetails.containsKey(Constants.EMBEDDER_ENGINE_NAME)) {
+			String embedderEngineId = (String) vectorDbDetails.getOrDefault(Constants.EMBEDDER_ENGINE_ID, null);
 			if (embedderEngineId == null) {
 				throw new IllegalArgumentException("EMBEDDER_ENGINE_ID must be defined for FAISS database");
 			}
-			
+
 			IModelEngine embeddingModel = Utility.getModel(embedderEngineId);
-			if(embeddingModel == null) {
+			if (embeddingModel == null) {
 				throw new IllegalArgumentException("EMBEDDER_ENGINE_ID " + embeddingModel + " could not be found");
 			}
 			String embeddingModelAlias = embeddingModel.getSmssProp().getProperty(Constants.ENGINE_ALIAS);
@@ -114,20 +115,32 @@ public class CreateVectorDatabaseEngineReactor extends AbstractReactor {
 		if (!vectorDbDetails.containsKey(Constants.INDEX_CLASSES)) {
 			vectorDbDetails.put(Constants.INDEX_CLASSES, "default");
 		}
-		
-		if(vectorDbType == VectorDatabaseTypeEnum.OPEN_SEARCH) {
-			if(vectorDbDetails.get(Constants.USERNAME) == null) { throw new IllegalArgumentException(Constants.USERNAME + " is not provided."); }
-			if(vectorDbDetails.get(Constants.PASSWORD) == null) { throw new IllegalArgumentException(Constants.PASSWORD + " is not provided."); }
-			if(vectorDbDetails.get(Constants.HOSTNAME) == null) { throw new IllegalArgumentException(Constants.HOSTNAME + " is not provided."); }
-			if(vectorDbDetails.get(OpenSearchRestVectorDatabaseEngine.INDEX_NAME) == null) { throw new IllegalArgumentException(OpenSearchRestVectorDatabaseEngine.INDEX_NAME + " is not provided."); }
+
+		if (vectorDbType == VectorDatabaseTypeEnum.OPEN_SEARCH) {
+			if (vectorDbDetails.get(Constants.USERNAME) == null) {
+				throw new IllegalArgumentException(Constants.USERNAME + " is not provided.");
+			}
+			if (vectorDbDetails.get(Constants.PASSWORD) == null) {
+				throw new IllegalArgumentException(Constants.PASSWORD + " is not provided.");
+			}
+			if (vectorDbDetails.get(Constants.HOSTNAME) == null) {
+				throw new IllegalArgumentException(Constants.HOSTNAME + " is not provided.");
+			}
+			if (vectorDbDetails.get(OpenSearchRestVectorDatabaseEngine.INDEX_NAME) == null) {
+				throw new IllegalArgumentException(OpenSearchRestVectorDatabaseEngine.INDEX_NAME + " is not provided.");
+			}
 		}
-		if(vectorDbType == VectorDatabaseTypeEnum.WEAVIATE) {
-			if(vectorDbDetails.get(Constants.API_KEY) == null) { throw new IllegalArgumentException(Constants.API_KEY + " is not provided."); }
-			if(vectorDbDetails.get(Constants.HOSTNAME) == null) { throw new IllegalArgumentException(Constants.HOSTNAME + " is not provided."); }
+		if (vectorDbType == VectorDatabaseTypeEnum.WEAVIATE) {
+			if (vectorDbDetails.get(Constants.API_KEY) == null) {
+				throw new IllegalArgumentException(Constants.API_KEY + " is not provided.");
+			}
+			if (vectorDbDetails.get(Constants.HOSTNAME) == null) {
+				throw new IllegalArgumentException(Constants.HOSTNAME + " is not provided.");
+			}
 		}
 
-		// not doing any checks right now for weaviate
-				
+		// vectorDbDetails.put(Constants.PIPELINE,"PIPELINE.json");
+
 		String vectorDbId = UUID.randomUUID().toString();
 		File tempSmss = null;
 		File smssFile = null;
@@ -136,108 +149,83 @@ public class CreateVectorDatabaseEngineReactor extends AbstractReactor {
 		try {
 			// validate engine
 			UploadUtilities.validateEngine(IEngine.CATALOG_TYPE.VECTOR, user, vectorDbName, vectorDbId);
-			specificEngineFolder = UploadUtilities.generateSpecificEngineFolder(IEngine.CATALOG_TYPE.VECTOR, vectorDbId, vectorDbName);
-			
+			specificEngineFolder = UploadUtilities.generateSpecificEngineFolder(IEngine.CATALOG_TYPE.VECTOR, vectorDbId,
+					vectorDbName);
+
 			String vectorDbClass = vectorDbType.getVectorDatabaseClass();
-			vectorDb = (IVectorDatabaseEngine) Class.forName(vectorDbClass).newInstance();
-			tempSmss = UploadUtilities.createTemporaryVectorDatabaseSmss(vectorDbId, vectorDbName, vectorDbClass, vectorDbDetails);
-			
-			// store in DIHelper so that when we move temp smss to smss it doesn't try to reload again
+			vectorDb = (IVectorDatabaseEngine) Class.forName(vectorDbClass).getDeclaredConstructor().newInstance();
+			tempSmss = UploadUtilities.createTemporaryVectorDatabaseSmss(vectorDbId, vectorDbName, vectorDbClass,
+					vectorDbDetails);
+
+			// store in DIHelper so that when we move temp smss to smss it doesn't try to
+			// reload again
 			DIHelper.getInstance().setEngineProperty(vectorDbId + "_" + Constants.STORE, tempSmss.getAbsolutePath());
 			vectorDb.open(tempSmss.getAbsolutePath());
-			
+
 			smssFile = new File(tempSmss.getAbsolutePath().replace(".temp", ".smss"));
 			FileUtils.copyFile(tempSmss, smssFile);
 			tempSmss.delete();
 			vectorDb.setSmssFilePath(smssFile.getAbsolutePath());
 			UploadUtilities.updateDIHelper(vectorDbId, vectorDbName, vectorDb, smssFile);
 			SecurityEngineUtils.addEngine(vectorDbId, global, user);
-			
-			// even if no security, just add user as database owner
-			if (user != null) {
-				List<AuthProvider> logins = user.getLogins();
-				for (AuthProvider ap : logins) {
-					SecurityEngineUtils.addEngineOwner(vectorDbId, user.getAccessToken(ap).getId());
-				}
+
+//			EngineUtility.createPipelineJsonInSpecificEngineFolder(IEngine.CATALOG_TYPE.VECTOR, vectorDbId, vectorDbName);
+
+			List<AuthProvider> logins = user.getLogins();
+			for (AuthProvider ap : logins) {
+				SecurityEngineUtils.addEngineOwner(vectorDbId, user.getAccessToken(ap).getId());
 			}
+
 			ClusterUtil.pushEngine(vectorDbId);
-		} catch(Exception e) {
+		} catch (Exception e) {
 			classLogger.error(Constants.STACKTRACE, e);
-			cleanUpCreateNewError(vectorDb, vectorDbId, tempSmss, smssFile, specificEngineFolder);
+			UploadUtilities.cleanUpCreateNewError(vectorDb, vectorDbId, tempSmss, smssFile, specificEngineFolder);
 			return new NounMetadata(e.getMessage(), PixelDataType.CONST_STRING, PixelOperationType.ERROR);
 		}
-		
+
 		Map<String, Object> retMap = UploadUtilities.getEngineReturnData(this.insight.getUser(), vectorDbId);
 		return new NounMetadata(retMap, PixelDataType.UPLOAD_RETURN_MAP, PixelOperationType.MARKET_PLACE_ADDITION);
 	}
-	
-	/**
-	 * Delete all the corresponding files that are generated from the upload the failed
-	 */
-	private void cleanUpCreateNewError(IVectorDatabaseEngine vectorEngine, String modelId, File tempSmss, File smssFile, File specificEngineFolder) {
-		try {
-			// close the DB so we can delete it
-			if (vectorEngine != null) {
-				vectorEngine.close();
-			}
-			// delete the .temp file
-			if (tempSmss != null && tempSmss.exists()) {
-				FileUtils.forceDelete(tempSmss);
-			}
-			// delete the .smss file
-			if (smssFile != null && smssFile.exists()) {
-				FileUtils.forceDelete(smssFile);
-			}
-			// delete the engine folder
-			if (specificEngineFolder != null && specificEngineFolder.exists()) {
-				FileUtils.forceDelete(specificEngineFolder);
-			}
-			
-			UploadUtilities.removeEngineFromDIHelper(modelId);
-		} catch (Exception e) {
-			classLogger.error(Constants.STACKTRACE, e);
-		}
-	}
-	
+
 	/**
 	 * 
 	 * @return
 	 */
 	private String getVectorDatabaseName() {
-		GenRowStruct grs = this.store.getNoun(ReactorKeysEnum.DATABASE.getKey());
-		if(grs != null && !grs.isEmpty()) {
+		GenRowStruct grs = this.store.getGenRowStruct(ReactorKeysEnum.DATABASE.getKey());
+		if (grs != null && !grs.isEmpty()) {
 			List<String> strValues = grs.getAllStrValues();
-			if(strValues != null && !strValues.isEmpty()) {
+			if (strValues != null && !strValues.isEmpty()) {
 				return strValues.get(0).trim();
 			}
 		}
-		
+
 		List<String> strValues = this.curRow.getAllStrValues();
-		if(strValues != null && !strValues.isEmpty()) {
+		if (strValues != null && !strValues.isEmpty()) {
 			return strValues.get(0).trim();
 		}
-		
+
 		throw new NullPointerException("Must define the name of the new vector database engine");
 	}
-	
+
 	/**
 	 * 
 	 * @return
 	 */
 	private Map<String, Object> getVectorDatabaseDetails() {
-		GenRowStruct grs = this.store.getNoun(ReactorKeysEnum.CONNECTION_DETAILS.getKey());
-		if(grs != null && !grs.isEmpty()) {
+		GenRowStruct grs = this.store.getGenRowStruct(ReactorKeysEnum.CONNECTION_DETAILS.getKey());
+		if (grs != null && !grs.isEmpty()) {
 			List<NounMetadata> mapNouns = grs.getNounsOfType(PixelDataType.MAP);
-			if(mapNouns != null && !mapNouns.isEmpty()) {
+			if (mapNouns != null && !mapNouns.isEmpty()) {
 				return (Map<String, Object>) mapNouns.get(0).getValue();
 			}
 		}
-		
+
 		List<NounMetadata> mapNouns = this.curRow.getNounsOfType(PixelDataType.MAP);
-		if(mapNouns != null && !mapNouns.isEmpty()) {
+		if (mapNouns != null && !mapNouns.isEmpty()) {
 			return (Map<String, Object>) mapNouns.get(0).getValue();
 		}
-		
+
 		throw new NullPointerException("Must define the properties for the new vector database engine");
 	}
 
